add ico header logo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>First title</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <title>Worldwide leaf</title>
+    <link rel="shortcut icon" type="image/favicon" href="images/favicon.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+  <header>
+    <span>
+      <h1 id="logo">
+        <a href="#"
+          ><img
+            src="images/logo.jpg"
+            title="Legalize"
+            alt="Legalize leaf"
+            class="imagelogo"
+        /></a>
+      </h1>
+    </span>
+  </header>
   <body>
-    <h1>Titulka</h1>
-    <p>Paragraf Param pam pam</p>
+    <h2>Чудовий лист</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos iste
+      aspernatur error reiciendis ratione necessitatibus quidem enim architecto
+      consequuntur accusantium, ipsa sint facere cum inventore dolore aliquid!
+      Harum, mollitia placeat?
+    </p>
     <a href="#">Onlain</a>
   </body>
 </html>
